# Phantom.FlatBuffers.Natvis

./: CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
reflection/: CMakeLists.txt  README.md  reflection-phantom-natvis.natvis
share/: FlatBuffersBase.natvis  PhantomFlatBuffersNatvisTargets.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  DebuggerTest.cpp  DebuggerTestFlatBuffers.bfbs  DebuggerTestFlatBuffers.fbs  DebuggerTestFlatBuffers.natvis
